test_programs/compile_failure/noirc_frontend_tests_traits_does_not_crash_on_as_trait_path_with_empty_path/src/main.nr

        struct Foo {
            x: <N>,
        }

        fn main() {}
    